Normalized with minfi; conda support

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.gitignore
 eForge.sh
 raw_qc.R
 references.R
@@ -5,3 +6,4 @@ tfbs_enrichment.R
 tissue_decomposition.R
 README.remarkup
 yapima_pbs.sh
+*.ori
